--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -55,6 +55,10 @@
 }
 
 .main-header {
+  @include breakpoint-sm {
+    width: 375px;
+  }
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -89,6 +93,10 @@
 }
 
 .alert {
+  @include breakpoint-sm {
+    max-width: 375px;
+    margin: 5px;
+  }
   margin: 15px;
   background-color: $color-primary;
   border-radius: 5px;
