--- a/scss/components/_social.scss
+++ b/scss/components/_social.scss
@@ -36,6 +36,9 @@
 }
 
 .social-container {
+  @include breakpoint-sm {
+    max-width: 375px;
+  }
   padding-bottom: 20px;
 }
 
