--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,4 +1,5 @@
 // Breakpoint Variables
+$brk-small: 375px;
 $brk-tablet: 768px;
 $brk-desktop: 1024px;
 
